# promptly-data-pipelines

./: .dockerignore  .env.example  .gitignore  Dockerfile  EXERCISE_1.md  README.md  config.yaml  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci-acceptance-dbt.yaml  ci-acceptance-infra.yaml
dbt/promptly/: dbt_project.yml  package-lock.yml  packages.yml
dbt/promptly/models/curated/: curated_provider.sql  schema.yaml
dbt/promptly/models/example/: my_first_dbt_model.sql
dbt/promptly/models/raw/: raw_care_site_postgres.sql  raw_provider_postgres.sql  source.yaml
dbt/promptly/profiles/: .user.yml  profiles.yml
docs/: diagram.excalidraw
docs/exercise_1/: diagram.excalidraw
docs/exercise_2/: diagram.excalidraw
infra/: setup.py
infra/airflow/: Chart.yaml  app.yaml  application.yaml  values.yaml
infra/trino/etc/catalog/: iceberg.properties  kafka.properties  postgresql.properties  s3.properties
infra/trino/etc/kafka-table-descriptions/: care_site.json  provider.json
promptly/: app.py  settings.py  setup.py
promptly/adapters/: engine.py  postgres.py  s3.py
promptly/adapters/data/postgres/: datagen.py
tests/acceptance/: conftest.py  test_dbt.py  test_dev.py  test_infra.py
tests/acceptance/fixtures/data/postgres/: datagen.py
tests/acceptance/fixtures/infra/: kind_cluster.yaml
