[project]
name = "promptly"
version = "0.1.0"
description = ""
authors = [
    {name = "felixroz",email = "marlon.saura@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dbt-duckdb (>=1.9.3,<2.0.0)",
    "boto3 (>=1.40.15,<2.0.0)",
    "trino (>=0.336.0,<0.337.0)",
    "polars (>=1.32.3,<2.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "pyiceberg (>=0.9.1,<0.10.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "ipdb (>=0.13.13,<0.14.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "minio (>=7.2.16,<8.0.0)",
    "dbt-trino (==1.9.3)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "elementary-data[trino]==0.16.1",
    "dbt-core (==1.9.3)",
    "setuptools (>=80.9.0,<81.0.0)",
    "pip (>=25.2,<26.0)",
    "kubernetes (>=33.1.0,<34.0.0)",
    "gitpython (>=3.1.45,<4.0.0)",
    "sqlfluff (>=3.4.2,<4.0.0)",
    "ruff (>=0.12.12,<0.13.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# adds subproject as a package of your main project
# disclaimer: it has to be under the main dependencies tab
# your-worker = { path = "your-worker", develop = true }

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

# I (Isort): Checks import ordering
# F (Pyflakes): Searches for common errors related to good coding practices
# E (Erros pycodestyle): Code style errors
# W (Avisos pycodestyle): Warns about code style issues
# PL (Pylint): Checks for errors and code smells
# PT (flake8-pytest): Checks for common pytest errors


[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings' # Supress warning messages in pytest

[tool.poetry.scripts]
entrypoint = "promptly.app:main"

[tool.poetry.group.dev.dependencies]
testcontainers = "^4.12.0"
ipdb = "^0.13.13"
taskipy = "^1.14.1"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pyperclip = "^1.9.0"


[tool.taskipy.tasks]
# linting and formatting
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'

lint_sql = 'sqlfluff lint ./dbt/ --dialect trino'
format_sql = 'sqlfluff format ./dbt/ --dialect trino --force'

# testing
test_acceptance_dbt = 'poetry run pytest -s -x -vv -k "test_dbt"'
test_acceptance_dbt_debug = 'DEBUG=true poetry run pytest -s -x -vv -k "test_dbt"'
exec_test_container = 'docker exec -it dbt-acceptance-test-container /bin/bash'
test_acceptance_infra = 'poetry run pytest -s -x -vv -k "test_infra"'

# utils
docker_clean_up = 'docker rm $(docker ps -aq)'